--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,98 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity"
-                android:background="#0000ff">
+<?xml version="1.0" encoding="utf-8"?>
 
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+<!--   Parent Layout With Vertical Orientation -->
+<LinearLayout
+    style="@style/linearlayout"
+    android:orientation="vertical"
+    android:background="@android:color/background_dark">
+
+    <!--   1st Child -->
+    <LinearLayout
+        style="@style/linearlayout"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView0"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/square"/>
+
+    </LinearLayout>
+    <!--   2nd Child -->
+    <LinearLayout
+        style="@style/linearlayout"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView4"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView5"
+            style="@style/square"/>
+    </LinearLayout>
+
+    <!--   3rd Child -->
+    <LinearLayout
+        style="@style/linearlayout"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView6"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView7"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView8"
+            style="@style/square"/>
+
+    </LinearLayout>
+
+    <!--   4th Child -->
+    <LinearLayout
+        style="@style/linearlayout"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView9"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView10"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView11"
+            style="@style/square"/>
+    </LinearLayout>
+
+    <!--   5th Child -->
+    <LinearLayout
+        style="@style/linearlayout"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView12"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView13"
+            style="@style/square"/>
+        <TextView
+            android:id="@+id/textView14"
+            style="@style/square"/>
+    </LinearLayout>
+    <!--   SeekBar Area -->
+    <SeekBar
+        android:id="@+id/seekbar"
+        style="@style/seekbar"/>
+</LinearLayout>
+</ScrollView>
